# Quakespasm

./: .gitignore
quakespasm/: CMakeLists.txt
quakespasm/Quake/: bspfile.h  chase.c  cl_main.c  client.h  cmd.h  common.c  common.h  console.c  console.h  cvar.c  cvar.h  gl_model.h  gl_refrag.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_vidsdl.c  glquake.h  host.c  keys.c  keys.h  modelgen.h  net_main.c  net_wipx.c  protocol.h  q_ctype.h  q_stdinc.h  quakedef.h  render.h  sbar.c  screen.h  vid.h  view.h  wad.c  zone.c
quakespasm/Windows/: QuakeSpasm.aps
quakespasm/chromatic/: Cargo.toml
quakespasm/chromatic/.cargo/: config
quakespasm/chromatic/chroma/: Cargo.toml
quakespasm/chromatic/chroma/.cargo/: config
quakespasm/chromatic/chroma/src/: bspfile.rs  cl_main.rs  client.rs  common.rs  console.rs  crc.rs  cvar.rs  gl_model.rs  gl_screen.rs  gl_texmgr.rs  host.rs  keys.rs  lib.rs  mathlib.rs  modelgen.rs  net.rs  net_defs.rs  net_main.rs  net_sys.rs  protocol.rs  q_sound.rs  render.rs  spritegn.rs  strl.rs  sys_sdl_win.rs  vid.rs  wad.rs  zone.rs
quakespasm/chromatic/src/: main.rs
